# llama-cpp-cffi

./: .gitignore  BUILD.md  CHANGELOG.md  LICENSE  Makefile_3.patch  Makefile_4.patch  Makefile_5.patch  Makefile_6.patch  README.md  _example.c  build_cffi.py  cibuildwheel.toml  clip_h_9.patch  example.c  example.h  ggml_c_6.patch  ggml_cpu_c_6.patch  ggml_cuda_cu_6.patch  ggml_cuda_pad_cu_6.patch  ggml_cuda_pad_cuh_6.patch  ggml_h_6.patch  ggml_metal_m_6.patch  ggml_metal_metal_6.patch  json_hpp_7.patch  json_schema_to_grammar_cpp_6.patch  json_schema_to_grammar_cpp_7.patch  json_schema_to_grammar_h_7.patch  json_schema_to_grammar_h_8.patch  llava_cpp_5.patch  llava_h_5.patch  main_3.patch  main_5.patch  main_shared_library_1.patch  mllama_cpp_6.patch  pyproject.toml  setup.py
.github/workflows/: build.yml
examples/: demo_0.py  demo_1.py  demo_arcee_chat.py  demo_arcee_tool.py  demo_cffi.py  demo_cffi_cpu.py  demo_clip.py  demo_ctypes.py  demo_ctypes_cpu.py  demo_ctypes_cuda_12_5.py  demo_llama.py  demo_llava.py  demo_messages.py  demo_minicpmv.py  demo_minicpmv_chat.py  demo_mllama.py  demo_models.py  demo_openai.py  demo_openai_load_models.py  demo_qwen2vl.py  demo_rwkv_chat.py  demo_rwkv_tool.py  demo_smollm_chat.py  demo_smollm_tool.py  demo_text.py  demo_text_cso.py  demo_tinyllama_chat.py  demo_tinyllama_tool.py  llm.py  vlm.py
llama/: __init__.py  cffi.py  clip.py  context.py  ctypes.py  formatter.py  gpu.py  llama.py  llama_cli.py  llama_cli_cffi.py  llama_cli_cffi_cpu.py  llama_cli_cffi_cuda_12_5.py  llama_cli_ctypes.py  llama_cli_ctypes_cpu.py  llama_cli_ctypes_cuda_12_5.py  llama_cli_options.py  llama_cpp.py  llama_cpp_ctypes.py  llava.py  minicpmv.py  model.py  openai.py  options.py  qwen2vl.py  sampler.py  server.py  text.py  util.py
misc/: Makefile_3.patch  Makefile_6.patch  build_cffi.py  build_llama_cli_cffi.py  clip.py  clip_cpp_5.patch  clip_h_5.patch  clip_h_6.patch  demo_arcee_chat.py  demo_arcee_tool.py  demo_cffi_cpu.py  demo_cffi_cuda_12_5.py  demo_ctypes_cpu.py  demo_ctypes_cuda_12_5.py  demo_llava_chat.py  demo_minicpmv_chat.py  demo_openai_0.py  demo_rwkv_chat.py  demo_rwkv_tool.py  demo_smollm_chat.py  demo_smollm_tool.py  demo_tinyllama_chat.py  demo_tinyllama_tool.py  json_schema_to_grammar_h_6.patch  llama_cli_cffi_cpu.py  llama_cli_cffi_cuda_12_5.py  llama_cli_ctypes_cpu.py  llama_cli_ctypes_cuda_12_5.py  llama_cpp_cffi.h  llava-cli_5.patch  llava_cpp_5.patch  main.py  main_3.patch  main_4.patch  main_shared_library_0.patch  makefile_static_library_0.patch  minicpmv-cli_5.patch  openai.py  pyproject-250205-0.toml  pyproject-250217-0.toml  (+2 more)
misc/demo_pyonide/: index.html  main.py  pyscript.toml
misc/llama/: __init__.py  llama_cli_cffi.py  llama_cli_ctypes.py
scripts/: build.py  build_all.py  build_clean.py  build_libllama_cli.py  build_llama_cli_cffi.py  build_llama_cpp.py  clean.py
src/: build.py  clean.py
src/llama/: clip.py  gpu.py  llama_cpp.py  llava.py  minicpmv.py  model.py  options.py  server.py  text.py
